--- a/requirements.txt
+++ b/requirements.txt
@@ -1,380 +1,2 @@
-absl-py==0.9.0
-alabaster==0.7.12
-alembic==1.4.2
-anaconda-client==1.7.2
-anaconda-navigator==1.9.12
-anaconda-project==0.8.3
-appdirs==1.4.4
-argh==0.26.2
-asgiref==3.2.7
-asn1crypto==1.3.0
-astor==0.8.1
-astroid==2.3.3
-astropy==4.0
-astunparse==1.6.3
-atomicwrites==1.3.0
-attrs==19.3.0
-auto-ts==0.0.20
-autopep8==1.4.4
-awscli==1.18.86
-azure-core==1.7.0
-azure-storage-blob==12.3.2
-Babel==2.8.0
-backcall==0.1.0
-backports.functools-lru-cache==1.6.1
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-bar-chart-race==0.1.0
-base58==2.0.1
-bcrypt==3.1.7
-beautifulsoup4==4.8.2
-bitarray==1.2.1
-bkcharts==0.2
-bleach==3.1.0
-blinker==1.4
-blis==0.4.1
-bokeh==1.4.0
-boto==2.49.0
-boto3==1.14.9
-botocore==1.17.9
-Bottleneck==1.3.2
-branca==0.4.1
-cachetools==4.1.1
-catalogue==1.0.0
-catboost==0.20.2
-certifi==2020.6.20
-cffi==1.14.0
-chardet==3.0.4
-chart-studio==1.1.0
-Click==7.0
-cliff==3.3.0
-cloudpickle==1.3.0
-clyent==1.2.2
-cmaes==0.6.0
-cmd2==1.2.1
-cmdstanpy==0.4.0
-colorama==0.4.3
-colorlog==4.2.1
-colorlover==0.3.0
-combo==0.1.0
-comtypes==1.1.7
-conda==4.8.3
-conda-build==3.18.11
-conda-package-handling==1.6.0
-conda-verify==3.4.2
-confuse==1.1.0
-contextlib2==0.6.0.post1
-convertdate==2.1.3
-cryptography==2.8
-cufflinks==0.17.0
-cycler==0.10.0
-cymem==2.0.3
-Cython==0.29.15
-cytoolz==0.10.1
-dask==2.11.0
-databricks-cli==0.11.0
-datefinder==0.7.0
-DateTime==4.3
-decorator==4.4.1
-defusedxml==0.6.0
-diff-match-patch==20181111
-distlib==0.3.1
-distributed==2.11.0
-docker==4.2.2
-docutils==0.15.2
-download==0.3.5
-entrypoints==0.3
-enum-compat==0.0.3
-ephem==3.7.7.1
-et-xmlfile==1.0.1
-fastcache==1.1.0
-fbprophet==0.6
-filelock==3.0.12
-flake8==3.7.9
-Flask==1.1.2
-Flask-Cors==3.0.8
-folium==0.11.0
-fsspec==0.6.2
-funcy==1.14
-future==0.18.2
-gast==0.3.3
-gensim==3.8.3
-gevent==1.4.0
-gitdb==4.0.5
-GitPython==3.1.7
-glob2==0.7
-google-auth @ file:///tmp/build/80754af9/google-auth_1594357566944/work
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-gorilla==0.3.0
-graphviz==0.14
-greenlet==0.4.15
-grpcio==1.30.0
-h5py==2.10.0
-HeapDict==1.0.1
-holidays==0.10.1
-html5lib==1.0.1
-htmlmin==0.1.12
-hyperopt==0.2.4
-hypothesis==5.5.4
-idna==2.8
-imageio==2.6.1
-imagesize==1.2.0
-imbalanced-learn==0.7.0
-implicit @ file:///D:/bld/implicit_1591810443891/work
-importlib-metadata @ file:///C:/ci/importlib-metadata_1593446525189/work
-importlib-resources==2.0.1
-imutils==0.5.3
-intervaltree==3.0.2
-ipykernel==5.1.4
-ipython==7.12.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isodate==0.6.0
-isort==4.3.21
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.15.2
-Jinja2==2.11.1
-jmespath==0.10.0
-joblib==0.14.1
-json5==0.9.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==6.1.0
-jupyter-core==4.6.1
-jupyterlab==1.2.6
-jupyterlab-server==1.0.6
-Keras==2.4.3
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
-Keras-Preprocessing==1.1.2
-keyring==21.1.0
-kiwisolver==1.1.0
-kmodes==0.10.1
-lazy-object-proxy==1.4.3
-libarchive-c==2.8
-lightgbm==2.3.1
-llvmlite==0.31.0
-locket==0.2.0
-LunarCalendar==0.0.9
-lxml==4.5.0
-Mako==1.1.3
-Markdown==3.2.2
-MarkupSafe==1.1.1
-matplotlib==3.1.3
-mccabe==0.6.1
-menuinst==1.4.16
-missingno==0.4.2
-mistune==0.8.4
-mkl-fft==1.0.15
-mkl-random==1.1.0
-mkl-service==2.3.0
-mlflow==1.10.0
-mlxtend==0.17.2
-mock==4.0.1
-more-itertools==8.2.0
-mpmath==1.1.0
-msgpack==0.6.1
-msrest==0.6.18
-multipledispatch==0.6.0
-murmurhash==1.0.2
-navigator-updater==0.2.1
-nbconvert==5.6.1
-nbformat==5.0.4
-networkx==2.4
-nltk==3.4.5
-nose==1.3.7
-notebook==6.0.3
-numba==0.48.0
-numdifftools==0.9.39
-numexpr==2.7.1
-numpy==1.19.1
-numpydoc==0.9.2
-oauthlib==3.1.0
-olefile==0.46
-opencv-python==4.2.0.34
-openpyxl==3.0.3
-opt-einsum==3.3.0
-optuna==2.0.0
-packaging==20.1
-pandas==1.0.5
-pandas-datareader==0.9.0
-pandas-profiling==2.3.0
-pandocfilters==1.4.2
-paramiko==2.7.1
-parso==0.5.2
-partd==1.1.0
-path==13.1.0
-pathlib2==2.3.5
-pathtools==0.1.2
-patsy==0.5.1
-pbr==5.4.5
-pep8==1.7.1
-pexpect==4.8.0
-phik==0.10.0
-pickleshare==0.7.5
-Pillow==7.0.0
-pkginfo==1.5.0.1
-plac==1.1.3
-plotly==4.4.1
-pluggy==0.13.1
-ply==3.11
-pmdarima==1.2.0
-preshed==3.0.2
-prettytable==0.7.2
-prometheus-client==0.7.1
-prometheus-flask-exporter==0.15.4
-prompt-toolkit==3.0.3
-protobuf==3.12.2
-psutil==5.6.7
-py==1.8.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.7
-pycaret==2.0
-pycodestyle==2.5.0
-pycosat==0.6.3
-pycparser==2.19
-pycrypto==2.6.1
-pycurl==7.43.0.5
-pydeck==0.4.0b2
-pydocstyle==4.0.1
-pyflakes==2.1.1
-pyflux==0.4.17
-pyforest==1.0.3
-Pygments==2.5.2
-PyJWT==1.7.1
-pyLDAvis==2.1.2
-pylint==2.4.4
-PyNaCl==1.3.0
-pyod==0.8.0
-pyodbc===4.0.0-unsupported
-pyOpenSSL==19.1.0
-pyparsing==2.4.6
-pyperclip==1.8.0
-pypiwin32==223
-pyreadline==2.1
-pyrsistent==0.15.7
-PySocks==1.7.1
-pystan==2.17.1.0
-pytest==5.3.5
-pytest-arraydiff==0.3
-pytest-astropy==0.8.0
-pytest-astropy-header==0.1.2
-pytest-doctestplus==0.5.0
-pytest-openfiles==0.4.0
-pytest-remotedata==0.3.2
-python-dateutil==2.8.1
-python-editor==1.0.4
-python-jsonrpc-server==0.3.4
-python-language-server==0.31.10
-pytz==2019.3
-PyWavelets==1.1.1
-pywin32==227
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.3
-pyzmq==18.1.1
-QDarkStyle==2.8
-QtAwesome==0.6.1
-qtconsole==4.6.0
-QtPy==1.9.0
-querystring-parser==1.2.4
-regex==2020.6.8
-requests==2.22.0
-requests-oauthlib==1.3.0
-retrying==1.3.3
-rope==0.16.0
-rsa==4.0
-Rtree==0.9.3
-ruamel-yaml==0.15.87
-s3transfer==0.3.3
-scikit-image==0.16.2
-scikit-learn==0.23.2
-scipy==1.4.1
-seaborn==0.10.0
-Send2Trash==1.5.0
-setuptools-git==1.2
-shap==0.32.1
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.14.0
-sklearn==0.0
-smart-open==2.0.0
-smmap==3.0.4
-snowballstemmer==2.0.0
-sortedcollections==1.1.2
-sortedcontainers==2.1.0
-soupsieve==1.9.5
-spacy==2.3.0
-Sphinx==2.4.0
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.2
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-sphinxcontrib-websupport==1.2.0
-spyder==4.1.3
-spyder-kernels==1.9.1
-SQLAlchemy==1.3.13
-sqlparse==0.3.1
-srsly==1.0.2
-statsmodels==0.11.0
-stevedore==3.2.0
-streamlit==0.62.1
-suod==0.0.4
-sweetviz==1.0a7
-sympy==1.5.1
-tables==3.6.1
-tabulate==0.8.7
-tbb==2019.0
-tblib==1.6.0
-tensorboard==2.2.2
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
-termcolor==1.1.0
-terminado==0.8.3
-testpath==0.4.4
-textblob==0.15.3
-thinc==7.4.1
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-toml==0.10.1
-toolz==0.10.0
-tornado==6.0.3
-tqdm @ file:///tmp/build/80754af9/tqdm_1593446365756/work
-traitlets==4.3.3
-tzlocal==2.1
-ujson==1.35
-umap-learn==0.4.4
-unicodecsv==0.14.1
-urllib3==1.25.8
-validators==0.15.0
-virtualenv==20.0.28
-waitress==1.4.4
-wasabi==0.7.0
-watchdog==0.10.2
-wcwidth==0.1.8
-webencodings==0.5.1
-websocket-client==0.57.0
-Werkzeug==1.0.0
-widgetsnbextension==3.5.1
-win-inet-pton==1.1.0
-win-unicode-console==0.5
-wincertstore==0.2
-word2number==1.1
-wordcloud==1.7.0
-wrapt==1.11.2
-xgboost==0.90
-xlrd==1.2.0
-XlsxWriter==1.2.7
-xlwings==0.17.1
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf==0.28.0
-yellowbrick==1.0.1
-zict==1.0.0
-zipp==2.2.0
-zope.interface==5.1.0
+flask==1.1.2
+gunicorn==19.9.0
